force-app/main/default/objects/Application__c/fields/Acknowledgement_of_final_loan_proceeds__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_of_final_loan_proceeds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement of final loan proceeds</label>
    <type>Checkbox</type>
</CustomField>