force-app/main/default/objects/Application__c/fields/Alchemy_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Alchemy_User_Id__c</fullName>
    <label>Alchemy_User_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>