force-app/main/default/objects/Application__c/fields/Attorney_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Contact_Address__c</fullName>
    <label>Attorney Contact Address</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>