force-app/main/default/objects/Application__c/fields/Attorney_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Contact_Email_Address__c</fullName>
    <label>Attorney Contact Email Address</label>
    <type>Email</type>
</CustomField>