force-app/main/default/objects/Application__c/fields/Attorney_Contact_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Contact_Mobile_Phone__c</fullName>
    <label>Attorney Contact Mobile Phone</label>
    <type>Phone</type>
</CustomField>