force-app/main/default/objects/Application__c/fields/Attorney_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Contact_Name__c</fullName>
    <label>Attorney Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>