force-app/main/default/objects/Application__c/fields/Attorney_Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Contact_State__c</fullName>
    <label>Attorney Contact State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>