force-app/main/default/objects/Application__c/fields/Attorney_Contact_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Contact_Work_Phone__c</fullName>
    <label>Attorney Contact Work Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>