force-app/main/default/objects/Application__c/fields/Attorney_Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Contact_Zip__c</fullName>
    <label>Attorney Contact Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>