force-app/main/default/objects/Application__c/fields/Average_Cost_of_Rental_Property_Reno__c.field-meta.xml
<CustomField>
    <fullName>Average_Cost_of_Rental_Property_Reno__c</fullName>
    <description>Average Cost of each of the Rental Property Renovation</description>
    <inlineHelpText>Average Cost of each of the Rental Property Renovation</inlineHelpText>
    <label>Average Cost of Rental Property Reno</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>