force-app/main/default/objects/Application__c/fields/Average_Hold_Time_of_Rental_Properties__c.field-meta.xml
<CustomField>
    <fullName>Average_Hold_Time_of_Rental_Properties__c</fullName>
    <label>Average Hold Time of Rental Properties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>