force-app/main/default/objects/Application__c/fields/Average_Rehab_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_Rehab_Time__c</fullName>
    <label>Average Rehab Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>