force-app/main/default/objects/Application__c/fields/Average_Rental_Property_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Rental_Property_Purchase_Price__c</fullName>
    <label>Average Rental Property Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>