force-app/main/default/objects/Application__c/fields/Broker_Alchemy_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Broker_Alchemy_User_Id__c</fullName>
    <label>Broker Alchemy User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>