force-app/main/default/objects/Application__c/fields/Business_Contact_Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact_Company_Address__c</fullName>
    <label>Business Contact Company Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>