force-app/main/default/objects/Application__c/fields/Business_Contact_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact_Company_Name__c</fullName>
    <label>Business Contact Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>