force-app/main/default/objects/Application__c/fields/Business_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact_Email__c</fullName>
    <label>Business Contact Email</label>
    <type>Email</type>
</CustomField>