force-app/main/default/objects/Application__c/fields/Business_Contact_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact_Work_Phone__c</fullName>
    <label>Business Contact Work Phone</label>
    <type>Phone</type>
</CustomField>