force-app/main/default/objects/Application__c/fields/Business_Entity_Additional_PrincipleInfo__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_Additional_PrincipleInfo__c</fullName>
    <label>Business Entity Additional PrincipleInfo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>