force-app/main/default/objects/Application__c/fields/Business_Entity_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_Address__c</fullName>
    <label>Business Entity Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>