force-app/main/default/objects/Application__c/fields/Business_Entity_Date_Of_Formation__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_Date_Of_Formation__c</fullName>
    <label>Business Entity Date Of Formation</label>
    <type>Date</type>
</CustomField>