force-app/main/default/objects/Application__c/fields/Business_Entity_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_Email_Address__c</fullName>
    <label>Business Entity Email Address</label>
    <type>Email</type>
</CustomField>