force-app/main/default/objects/Application__c/fields/Business_Entity_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_Mobile_Phone__c</fullName>
    <label>Business Entity Mobile Phone</label>
    <type>Phone</type>
</CustomField>