force-app/main/default/objects/Application__c/fields/Business_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_Name__c</fullName>
    <label>Business Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>