force-app/main/default/objects/Application__c/fields/Business_Entity_Place_of_Formation__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_Place_of_Formation__c</fullName>
    <label>Business Entity Place of Formation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>