force-app/main/default/objects/Application__c/fields/Business_Entity_Type_Of_Company__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_Type_Of_Company__c</fullName>
    <label>Business Entity Type Of Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>