force-app/main/default/objects/Application__c/fields/Cost_for_Acquired_Properties__c.field-meta.xml
<CustomField>
    <fullName>Cost_for_Acquired_Properties__c</fullName>
    <label>Cost for Acquired Properties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>