force-app/main/default/objects/Application__c/fields/Counties_Operate_In__c.field-meta.xml
<CustomField>
    <fullName>Counties_Operate_In__c</fullName>
    <label>Counties Operate In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>