force-app/main/default/objects/Application__c/fields/Credit_Pull_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Pull_Sign_Date__c</fullName>
    <label>Credit Pull Sign Date</label>
    <type>Date</type>
</CustomField>