force-app/main/default/objects/Application__c/fields/Credit_Pull_Sign_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Pull_Sign_Name__c</fullName>
    <label>Credit Pull Sign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>