force-app/main/default/objects/Application__c/fields/Credit_Pull_Signature__c.field-meta.xml
<CustomField>
    <fullName>Credit_Pull_Signature__c</fullName>
    <label>Credit Pull Signature</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>