force-app/main/default/objects/Application__c/fields/Current_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Date__c</fullName>
    <label>Current Date</label>
    <type>DateTime</type>
</CustomField>