force-app/main/default/objects/Application__c/fields/Date_of_Estimation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Estimation__c</fullName>
    <label>Date of Estimation</label>
    <type>Date</type>
</CustomField>