force-app/main/default/objects/Application__c/fields/Deal_2__c.field-meta.xml
<CustomField>
    <fullName>Deal_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal 2</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Applications (Deal 2)</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>