force-app/main/default/objects/Application__c/fields/Delinquent_Debt_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Delinquent_Debt_File_Id__c</fullName>
    <label>Delinquent Debt File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>