force-app/main/default/objects/Application__c/fields/Deliquent_Or_Default_On_Any_Debt__c.field-meta.xml
<CustomField>
    <fullName>Deliquent_Or_Default_On_Any_Debt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliquent Or Default On Any Debt</label>
    <type>Checkbox</type>
</CustomField>