force-app/main/default/objects/Application__c/fields/Deliquent_Or_Default_On_Any_Debt_Comment__c.field-meta.xml
<CustomField>
    <fullName>Deliquent_Or_Default_On_Any_Debt_Comment__c</fullName>
    <label>Deliquent Or Default On Any Debt Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>