force-app/main/default/objects/Application__c/fields/Deliquent_Or_Default_On_Any_Debt_File__c.field-meta.xml
<CustomField>
    <fullName>Deliquent_Or_Default_On_Any_Debt_File__c</fullName>
    <formula>IF(ISBLANK(Delinquent_Debt_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Delinquent_Debt_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deliquent Or Default On Any Debt File</label>
    <type>Text</type>
</CustomField>