force-app/main/default/objects/Application__c/fields/Demographic_Collection_Method__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Collection_Method__c</fullName>
    <label>Demographic Collection Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>