force-app/main/default/objects/Application__c/fields/Estimated_Net_Worth_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Net_Worth_Value__c</fullName>
    <label>Estimated Net Worth Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>