force-app/main/default/objects/Application__c/fields/Estimated_Prepayment_Penalties__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Prepayment_Penalties__c</fullName>
    <label>Estimated Prepayment Penalties</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>