force-app/main/default/objects/Application__c/fields/Estimated_Renovation_Costs__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Renovation_Costs__c</fullName>
    <label>Estimated Renovation Costs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>