force-app/main/default/objects/Application__c/fields/Estimated_Total_Liquid_Asset_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Liquid_Asset_Value__c</fullName>
    <label>Estimated Total Liquid Asset Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>