force-app/main/default/objects/Application__c/fields/Estimated_Value_of_Entire_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value_of_Entire_Portfolio__c</fullName>
    <label>Estimated Value of Entire Portfolio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>