force-app/main/default/objects/Application__c/fields/Ethnicity_Based_On_Observation__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_Based_On_Observation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ethnicity Based On Observation</label>
    <type>Checkbox</type>
</CustomField>