force-app/main/default/objects/Application__c/fields/Exit_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Exit_Strategy__c</fullName>
    <label>Exit Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>