force-app/main/default/objects/Application__c/fields/Expected_Occupancy_at_Close__c.field-meta.xml
<CustomField>
    <fullName>Expected_Occupancy_at_Close__c</fullName>
    <label>Expected Occupancy at Close</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>