force-app/main/default/objects/Application__c/fields/Fair_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Fair_Market_Value__c</fullName>
    <label>Fair Market Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>