force-app/main/default/objects/Application__c/fields/Felony__c.field-meta.xml
<CustomField>
    <fullName>Felony__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Felony</label>
    <type>Checkbox</type>
</CustomField>