force-app/main/default/objects/Application__c/fields/Felony_Comments__c.field-meta.xml
<CustomField>
    <fullName>Felony_Comments__c</fullName>
    <label>Felony Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>