force-app/main/default/objects/Application__c/fields/Felony_File__c.field-meta.xml
<CustomField>
    <fullName>Felony_File__c</fullName>
    <formula>IF(ISBLANK(Felony_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Felony_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Felony File</label>
    <type>Text</type>
</CustomField>