force-app/main/default/objects/Application__c/fields/Felony_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Felony_File_Id__c</fullName>
    <label>Felony File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>