force-app/main/default/objects/Application__c/fields/Financial_Sanctions_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Financial_Sanctions_File_Id__c</fullName>
    <label>Financial Sanctions File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>