force-app/main/default/objects/Application__c/fields/Financing_For_Each_Project__c.field-meta.xml
<CustomField>
    <fullName>Financing_For_Each_Project__c</fullName>
    <label>Financing For Each Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>