force-app/main/default/objects/Application__c/fields/Foreign_National_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Foreign_National_File_Id__c</fullName>
    <label>Foreign National File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>