force-app/main/default/objects/Application__c/fields/Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>Form_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Completed</label>
    <type>Checkbox</type>
</CustomField>