force-app/main/default/objects/Application__c/fields/Has_Lost_Money_on_Property__c.field-meta.xml
<CustomField>
    <fullName>Has_Lost_Money_on_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Applicant ever lost money on a rental Property or fix and flip</description>
    <inlineHelpText>Has Applicant ever lost money on a rental Property or fix and flip</inlineHelpText>
    <label>Has Lost Money on Property</label>
    <type>Checkbox</type>
</CustomField>