force-app/main/default/objects/Application__c/fields/Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Home_Address__c</fullName>
    <label>Home Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>