force-app/main/default/objects/Application__c/fields/How_is_Property_Management_Handled__c.field-meta.xml
<CustomField>
    <fullName>How_is_Property_Management_Handled__c</fullName>
    <label>How is Property Management Handled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self-Managed</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>