force-app/main/default/objects/Application__c/fields/How_Long_Investing_in_Rental_Properties__c.field-meta.xml
<CustomField>
    <fullName>How_Long_Investing_in_Rental_Properties__c</fullName>
    <label>How Long Investing in Rental Properties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>