force-app/main/default/objects/Application__c/fields/How_Long_to_Hold_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>How_Long_to_Hold_Portfolio__c</fullName>
    <description>How long does the Applicant intend on holding the Portfolio</description>
    <inlineHelpText>How long does the Applicant intend on holding the Portfolio</inlineHelpText>
    <label>How Long to Hold Portfolio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-2 Years</fullName>
            </value>
            <value>
                <fullName>3-5 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>