force-app/main/default/objects/Application__c/fields/Insurance_Agent_Address__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Agent_Address__c</fullName>
    <label>Insurance Agent Address</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>