force-app/main/default/objects/Application__c/fields/Insurance_Agent_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Agent_Company_Name__c</fullName>
    <label>Insurance Agent Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>