force-app/main/default/objects/Application__c/fields/Insurance_Agent_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Agent_Email_Address__c</fullName>
    <label>Insurance Agent Email Address</label>
    <type>Email</type>
</CustomField>