force-app/main/default/objects/Application__c/fields/Insurance_Agent_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Agent_Mobile_Phone__c</fullName>
    <label>Insurance Agent Mobile Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>