force-app/main/default/objects/Application__c/fields/Insurance_Agent_State__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Agent_State__c</fullName>
    <label>Insurance Agent State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>