force-app/main/default/objects/Application__c/fields/Insurance_Agent_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Agent_Work_Phone__c</fullName>
    <label>Insurance Agent Work Phone</label>
    <type>Phone</type>
</CustomField>