force-app/main/default/objects/Application__c/fields/Interest_Rate_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Rate Checkbox</label>
    <type>Checkbox</type>
</CustomField>