force-app/main/default/objects/Application__c/fields/Investment_Lost_Money_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Investment_Lost_Money_Explanation__c</fullName>
    <label>Investment Lost Money Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>