force-app/main/default/objects/Application__c/fields/Is_Foreign_National__c.field-meta.xml
<CustomField>
    <fullName>Is_Foreign_National__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Foreign National</label>
    <type>Checkbox</type>
</CustomField>