force-app/main/default/objects/Application__c/fields/Is_Foreign_National_Comments__c.field-meta.xml
<CustomField>
    <fullName>Is_Foreign_National_Comments__c</fullName>
    <label>Is Foreign National Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>