force-app/main/default/objects/Application__c/fields/Is_Foreign_National_File__c.field-meta.xml
<CustomField>
    <fullName>Is_Foreign_National_File__c</fullName>
    <formula>IF(ISBLANK(Foreign_National_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Foreign_National_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Foreign National File</label>
    <type>Text</type>
</CustomField>