force-app/main/default/objects/Application__c/fields/Is_Lawsuit_Defendant__c.field-meta.xml
<CustomField>
    <fullName>Is_Lawsuit_Defendant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lawsuit Defendant</label>
    <type>Checkbox</type>
</CustomField>