force-app/main/default/objects/Application__c/fields/Is_Lawsuit_Defendant_Comments__c.field-meta.xml
<CustomField>
    <fullName>Is_Lawsuit_Defendant_Comments__c</fullName>
    <label>Is Lawsuit Defendant Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>