force-app/main/default/objects/Application__c/fields/Is_Lawsuit_Defendant_File__c.field-meta.xml
<CustomField>
    <fullName>Is_Lawsuit_Defendant_File__c</fullName>
    <formula>IF(ISBLANK(Lawsuit_Defendent_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Lawsuit_Defendent_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lawsuit Defendant File</label>
    <type>Text</type>
</CustomField>