force-app/main/default/objects/Application__c/fields/Is_Permanent_Resident_Alien__c.field-meta.xml
<CustomField>
    <fullName>Is_Permanent_Resident_Alien__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Permanent Resident Alien</label>
    <type>Checkbox</type>
</CustomField>