force-app/main/default/objects/Application__c/fields/Is_Permanent_Resident_Alien_Comments__c.field-meta.xml
<CustomField>
    <fullName>Is_Permanent_Resident_Alien_Comments__c</fullName>
    <label>Is Permanent Resident Alien Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>