force-app/main/default/objects/Application__c/fields/Is_Permanent_Resident_Alien_File__c.field-meta.xml
<CustomField>
    <fullName>Is_Permanent_Resident_Alien_File__c</fullName>
    <formula>IF(ISBLANK(Permanent_Resident_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+Permanent_Resident_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Permanent Resident Alien File</label>
    <type>Text</type>
</CustomField>