force-app/main/default/objects/Application__c/fields/Is_US_Citizen_Comments__c.field-meta.xml
<CustomField>
    <fullName>Is_US_Citizen_Comments__c</fullName>
    <label>Is US Citizen Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>