force-app/main/default/objects/Application__c/fields/Is_US_Citizen_File__c.field-meta.xml
<CustomField>
    <fullName>Is_US_Citizen_File__c</fullName>
    <formula>IF(ISBLANK(US_Citizen_File_Id__c), &apos;&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;+US_Citizen_File_Id__c, &quot;Download&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is US Citizen File</label>
    <type>Text</type>
</CustomField>