force-app/main/default/objects/Application__c/fields/Lawsuit_Defendent_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Lawsuit_Defendent_File_Id__c</fullName>
    <label>Lawsuit Defendent File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>