force-app/main/default/objects/Application__c/fields/Lender_Payoff_Property_Number__c.field-meta.xml
<CustomField>
    <fullName>Lender_Payoff_Property_Number__c</fullName>
    <label>Lender Payoff Property Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>