force-app/main/default/objects/Application__c/fields/Loan_Desired_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Desired_Amount__c</fullName>
    <label>Loan Desired Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>