force-app/main/default/objects/Application__c/fields/Loan_Id__c.field-meta.xml
<CustomField>
    <fullName>Loan_Id__c</fullName>
    <label>Loan Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>