force-app/main/default/objects/Application__c/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <label>Loan Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>