force-app/main/default/objects/Application__c/fields/Lost_Money_on_an_Investment_project__c.field-meta.xml
<CustomField>
    <fullName>Lost_Money_on_an_Investment_project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lost Money on an Investment project</label>
    <type>Checkbox</type>
</CustomField>