force-app/main/default/objects/Application__c/fields/Lost_Money_Or_Fix_and_Flip__c.field-meta.xml
<CustomField>
    <fullName>Lost_Money_Or_Fix_and_Flip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lost Money Or Fix and Flip</label>
    <type>Checkbox</type>
</CustomField>