force-app/main/default/objects/Application__c/fields/Number_of_Properties_Self_Managed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Properties_Self_Managed__c</fullName>
    <label>Number of Properties Self-Managed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>