force-app/main/default/objects/Application__c/fields/Number_of_Rental_Properties_Owned__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rental_Properties_Owned__c</fullName>
    <label># of Rental Properties Owned</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>