force-app/main/default/objects/Application__c/fields/Obtain_Title_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Obtain_Title_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obtain Title Insurance</label>
    <type>Checkbox</type>
</CustomField>