force-app/main/default/objects/Application__c/fields/Occupation_Statement__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Statement__c</fullName>
    <label>Occupation Statement</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>